Fixed navbar overlap, add boxshadow style on navbar when scroll down and remove same when user is at top of the page center main

--- a/css/desktopStyle.css
+++ b/css/desktopStyle.css
@@ -19,13 +19,18 @@
 
     main{
         display: block;
-  
-  
+        z-index: 1;
+        top: 100px;
+        position: absolute; 
+        left: 10%;
         
+    }
+    header{
+        z-index: 5;
     }
     section{
       
-        width: 70%;
+        width: 80%;
         left: 10px;
     }
   }
